--- a/index.html
+++ b/index.html
@@ -38,13 +38,12 @@
                 <!-- if needed -->
                 <span class="title-bg">for Beginners</span>
             </h1>
-            <h2><span>with</span> Instructor Name</h2>
+            <h2><span>with</span> Donna Long</h2>
 
-            <img class="instructor-img" src="framework/img/your-pic.jpg" alt="Instructor Name">
+            <img class="instructor-img" src="framework/img/donna3.jpg" alt="Donna Long">
             <ul>
-                <li><i class="fa fa-envelope"></i><a href="mailto:">hello@mail.com</a></li>
-                <li><i class="fa fa-desktop"></i><a href="http://">your-website.com</a></li>
-                <li><i class="fa fa-twitter"></i><a href="http://twitter.com/">@me</a></li>
+                <li><i class="fa fa-envelope"></i><a href="mailto:donna.kk.long@gmail.com">Email</a></li>
+                <li><i class="fa fa-linkedin"></i><a href="http://www.linkedin.com/in/donnaklong">LinkedIn</a></li>
             </ul>
         </div>
         <div class="presenter-notes">
